src/main/java/com/example/stream/spring/courses/reactive/example/model/error/StudentDeleteOk.java
package com.example.stream.spring.courses.reactive.example.model.error;

public record StudentDeleteOk() implements StudentSuccess {
}
